<resources>
    <string name="app_name">PianoGrupo04</string>
    <string name="catolica">UNIVERSIDAD CATÓLICA DE EL SALVADOR</string>
    <string name="logounicaes">logoUnicaes</string>
    <string name="integrantes">Integrantes:</string>
    <string name="manuel">José Manuel Solís Martínez</string>
    <string name="sofia">Josselyn Sofía Escobar Díaz</string>
    <string name="marco">Marco Tulio Umaña Rivera</string>
    <string name="_2017sm602">2017SM602</string>
    <string name="_2017ed601">2017ED601</string>
    <string name="_2017ur601">2017UR601</string>
    <string name="foto_de_manuel">foto de Manuel</string>
    <string name="foto_de_sofia">foto de Sofia</string>
    <string name="foto_de_marco">foto de Marco</string>
    <string name="piano_de_instrumentos">Piano de Instrumentos</string>
    <string name="buho">buho</string>
    <string name="burro">Burro</string>
    <string name="caballo">caballo</string>
    <string name="gallo">gallo</string>
    <string name="oveja">oveja</string>
    <string name="perro">perro</string>
    <string name="vaca">vaca</string>
    <string name="salir">¿Desea salir de PianoGrupo04?</string>
    <string name="si">Sí</string>
    <string name="cancelar">Cancelar</string>
    <string name="cambiar">Cambiar tipo de piano:</string>
    <string name="tradicional">Piano tradicional</string>
    <string name="selva">Piano infantil de la selva</string>
    <string name="instrumentos">Piano de instrumentos musicales</string>
    <string name="BUHO">¡BUHO!</string>
    <string name="BURRO">¡BURRO!</string>
    <string name="CABALLO">¡CABALLO!</string>
    <string name="GALLO">¡GALLO!</string>
    <string name="OVEJA">¡OVEJA!</string>
    <string name="PERRO">¡PERRO!</string>
    <string name="VACA">¡VACA!</string>
    <string name="ARPA">¡ARPA!</string>
    <string name="BAJO">¡BAJO!</string>
    <string name="BONGOS">¡BONGOS!</string>
    <string name="FLAUTA">¡FLAUTA!</string>
    <string name="PIANO">¡PIANO!</string>
    <string name="TAMBOR">¡TAMBOR!</string>
    <string name="TROMPETA">¡TROMPETA!</string>
    <string name="DO">¡DO!</string>
    <string name="RE">¡RE!</string>
    <string name="MI">¡MI!</string>
    <string name="FA">¡FA!</string>
    <string name="SOL">¡SOL</string>
    <string name="LA">¡LA!</string>
    <string name="SI">¡SI!</string>
    <string name="DO_">¡DO#!</string>
    <string name="RE_">¡RE#!</string>
    <string name="FA_">¡FA#!</string>
    <string name="SOL_">¡SOL#!</string>
    <string name="LA_">¡LA#!</string>
    <string name="imagen_de_buho">imagen de buho</string>
    <string name="imagen_de_burro">imagen de burro</string>
    <string name="imagen_de_caballo">imagen de caballo</string>
    <string name="imagen_de_gallo">imagen de gallo</string>
    <string name="imagen_de_oveja">imagen de oveja</string>
    <string name="imagen_de_perro">imagen de perro</string>
    <string name="imagen_de_vaca">imagen de vaca</string>
</resources>