<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorFondo"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="20dp"
    tools:context=".activity_AcercaDeNosotros"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-19dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:layout_weight="1"
                android:text="@string/catolica"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_weight="1"
                android:contentDescription="@string/logounicaes"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/unicaes_logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integrantes"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manuel" />

            <TextView
                android:id="@+id/textView5"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sofia" />

            <TextView
                android:id="@+id/textView7"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/marco" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/_2017sm602" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/_2017ed601" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/_2017ur601" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="@string/foto_de_manuel"
                android:layout_weight="1"
                app:srcCompat="@drawable/manuel" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="@string/foto_de_sofia"
                android:layout_weight="1"
                app:srcCompat="@drawable/sofia" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:contentDescription="@string/foto_de_marco"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/marco" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>